--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .idea
 plugin-devis/.idea
 /.idea
-~/Documents/Openclassrooms/plugin-devis/.idea
+~/Documents/Openclassrooms/plugin-devis/.idea/workspace.xml
